tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_wrong_type_in_for_range/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: The type bool cannot be used in a for loop
  ┌─ src/main.nr:3:18
  │
3 │         for _ in true..false { 
  │                  ----
  │

Aborting due to 1 previous error
